additional styling to fix layout issues on mobile

--- a/style/index.css
+++ b/style/index.css
@@ -14,11 +14,13 @@ body {
 header, footer {
     background-color:coral;
     color:whitesmoke;
+    padding:3% 0;
 }
 
 .container {
     margin:0px auto;
-    max-width:900px;
+    max-width:960px;
+    padding:0px 2%;
 }
 
 .btn {
@@ -39,10 +41,12 @@ header .container {
     display:flex;
     justify-content: space-between;
     align-items:center;
+    flex-wrap:wrap;
 }
 
 nav {
     display:flex;
+    
 }
 
 nav a {
@@ -66,11 +70,12 @@ nav a:hover {
 #hero {
     display:flex;
     margin:3% 0;
+    align-items: center;
 }
 
 #hero img {
-    max-width:50%;
-    display:inline-block;
+    max-width:100%;
+    display: inline-block;
 }
 
 .hero-info {
@@ -84,6 +89,7 @@ nav a:hover {
 
 .project {
     margin-right:2%;
+    max-width:48%;
 }
 
 p.caption {
